[package]
name = "serde-test"
version = "0.1.0"
edition = "2021"

[lib]
name = "test"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust.git", default-features = true, branch = "main" }
bumpalo = "=3.11.1"
wasm-bindgen = "=0.2.83"
serde_json = "1.0"
